--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,36 +69,57 @@ body {
 }
 
 @media screen and (max-width: 900px) {
+  .page-layout {
+    grid-template-rows: auto; 
+    height: 100%; 
+  }
+
   .content {
-    display: grid;
-    grid-template-rows: 25% 50% 25%;
-    grid-template-columns: 1fr; 
+    display: block; 
+    height: auto;
+    overflow-y: auto; 
+    padding: 10px; 
   }
 
   .content .left-section, 
   .content .middle-section, 
   .content .right-section {
-    display: block;
     padding: 8px;
+    margin-bottom: 10px; 
     background-color: rgb(199, 162, 95); 
   }
 
+  .navbar-container {
+    margin-top: 15px;
+  }
+  .text-container {
+    padding: 15px;
+    height: fit-content;
+    
+  }
+}
+@media screen and (min-width: 901px) {
+  .content .left-section {
+    display: grid;
+    grid-template-rows: 30% 70%;
+  }
   .content .middle-section {
-    overflow-y: auto;
+    display: grid;
+    grid-template-rows: 70% 30%;
+  }
+  .text-container {
+    max-height: 245px;
   }
 }
 
 /* Content Sections */
 .content .left-section {
-  display: grid;
-  grid-template-rows: 30% 70%;
   background-color: rgb(199, 162, 95);
   padding: 8px;
 }
 
 .content .middle-section {
-  display: grid;
-  grid-template-rows: 70% 30%;
+
   padding: 8px;
   overflow-y: auto; 
   position: relative; 
@@ -123,8 +144,8 @@ body {
 
 .text-container {
   padding: 15px;
-  max-height: 245px;
   overflow-y: auto;
+  text-align: justify;
 }
 
 .text-container::-webkit-scrollbar, 
@@ -136,9 +157,10 @@ body {
 }
 
 .list-container {
+  display: flex;
+  justify-content: center;
   background-color: rgb(155, 235, 155);
   color: black;
   padding: 4px;
   border-radius: 20px;
-  overflow-y: auto;
 }
