--- a/styles/styles.css
+++ b/styles/styles.css
@@ -137,6 +137,7 @@ body {
 }
 
 .bg-image {
+  display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -148,10 +149,8 @@ body {
   text-align: justify;
 }
 
-.text-container::-webkit-scrollbar, 
-.list-container::-webkit-scrollbar, 
-.content::-webkit-scrollbar, 
-.middle-section::-webkit-scrollbar {
+
+.no-scrollbar::-webkit-scrollbar {
   width: 0;
   background: transparent;
 }
@@ -163,4 +162,5 @@ body {
   color: black;
   padding: 4px;
   border-radius: 20px;
+  overflow-y: auto;
 }
